@@ -29,6 +29,8 @@
 #  define SCOPLIB_INT_T_IS_LONGLONG
 # endif
 # define LINEAR_VALUE_IS_LONGLONG
+# include <scoplib/scop.h>
+# include <scoplib/macros.h>
 # include <pocc/common.h>
 # include <pocc/driver-codegen.h>
 # include <pocc-utils/options.h>
